finished html and css file

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,14 +4,36 @@ body {
   padding: 0;
   background-color: black;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #fff;
 }
 
 h1 {
   /* text-align: center; */
-  color: #fff;
+
   font-weight: 100;
+  text-align: center;
+}
+
+img {
+  padding: 30px;
 }
 
 .cellphone {
   margin: 50px;
+}
+
+.footer-callout {
+  font-size: 40px;
+}
+
+.download-excursion {
+  padding: 30px;
+  font-size: large;
+}
+
+.copyright {
+  color: gray;
+  font-size: 1.4rem;
+  text-align: right;
+  padding: 20px;
 }
